ingress/bootsndcpui-app-ingress-qa01.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /online/pharmacy
   nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
   nginx.ingress.kubernetes.io/forece-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/add-base-url: "true"
  name: bootsndcpui-ip-ingress
  namespace: bootsndcpui
spec:
  tls:
  - hosts:
    - test1.boots.com
    secretName: www.test1.boots.com
  rules:
  - host: test1.boots.com
  - http:
      paths:
      - backend:
          serviceName: bootsndcpui
          servicePort: 3000
        path: /online/pharmacy
