ingress/bootsndcpui-app-ingress-qa01_22012019.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /online/pharmacy
   nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
   nginx.ingress.kubernetes.io/forece-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/add-base-url: "true"
  name: bootsndcpui-app-ingress
  namespace: bootsndcpui
spec:
  tls:
  - hosts:
    - dhpqa01.gcp.boots.com
    secretName: dhpqa01.gcp.boots.com
  rules:
  - host: dhpqa01.gcp.boots.com
    http:
      paths:
      - backend:
          serviceName: bootsndcpui
          servicePort: 3000
        path: /online/pharmacy
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /online/pharmacy
   nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
   nginx.ingress.kubernetes.io/forece-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/add-base-url: "true"
  name: bootsndcpui-www-test1-boots-ingress
  namespace: bootsndcpui
spec:
  tls:
  - hosts:
    - www.test1.boots.com
    secretName: www.test1.boots.com
  rules:
  - host: www.test1.boots.com
    http:
      paths:
      - backend:
          serviceName: bootsndcpui
          servicePort: 3000
        path: /online/pharmacy
