ingress/bootsndcpui-app-ingress-qa01_new.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /online/pharmacy
   nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
   nginx.ingress.kubernetes.io/forece-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/add-base-url: "true"
  name: bootsndcpui-ip-ingress
  namespace: bootsndcpui
spec:
  rules:
  - http:
      paths:
        backend:
          serviceName: bootsndcpui
          servicePort: 3000
      - path: /online/pharmacy
